Hide closed task by default, save note editor scroll position to restore it each time it is refreshed.